--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Card Game</h1>
 
-<p id="demo">A Paragraph.</p>
+<p id="demo">Click on Try it</p>
 
 <button type="button" onclick="cc(2)">Try it</button>
 
