--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <p id="demo">Click on Try it</p>
 
 <button type="button" onclick="cc(2)">Try it</button>
-
-
-
 <script>
   function cc(card) {
     var count = 0;
@@ -33,7 +30,7 @@ if(count > 0){
    return count + " Bet";
 }
   else return count + " Hold";
-   document.getElementById("demo").innerHTML = "value of card = " + count;
+   document.getElementById("demo").innerHTML = "value of card = ";
   // Only change code above this line
 }</script>
 
