--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <h1>Card Game</h1>
 
 <p id="demo">Click on Try it</p>
+  
+  <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
 
 <button type="button" onclick="cc(2)">Try it</button>
 <script>
