--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 
-  <head>Card game</head>
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Card game</title>
+    <link href="https://viprud.github.io/cardgame/assets/css/style.css?v=87694b1804becf0fdd078289a2478134ff4a0c86" rel="stylesheet">
+</head>
 <body>
 
 <h1>Card Game</h1>
