--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 if(count > 0){
    return count + " Bet";
 }
-  else return count + " Hold";
-   document.getElementById("demo").innerHTML = "value of card = ";
+  else return count + " Hold";}
+   document.getElementById("demo").innerHTML = "value of card = " + count;
   // Only change code above this line
-}</script>
+</script>
 
 </body>
