--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ if(count > 0){
    return count + " Bet";
 }
   else return count + " Hold";}
-   document.getElementById("demo").innerHTML = "value of card = " + count;
+   document.getElementById("demo").innerHTML = "value of card = ";
   // Only change code above this line
 </script>
 
