--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 if(count > 0){
    return count + " Bet";
 }
-  else return count + " Hold";}
+  else return count + " Hold";
+  }
    document.getElementById("demo").innerHTML = cc(2);
   // Only change code above this line
 </script>
