--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p id="demo">Click on Try it</p>
   
-  <button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+  <button onclick="document.getElementById('demo').innerHTML=cc(2)">The value of card is</button>
 
 <button type="button" onclick="cc(2)">Try it</button>
 <script>
@@ -38,7 +38,7 @@ if(count > 0){
 }
   else return count + " Hold";
   }
-   document.getElementById("demo").innerHTML = cc(2);
+   
   // Only change code above this line
 </script>
 
